[package]
name = "atk_mysql_spy"
version = "0.1.0"
authors = ["alex"]
edition = "2018"

[dependencies]
pcap = { version = "0.7", features = ["tokio"] }
futures = "*"
mio = "*"
tokio-core = "*"
tokio = "*"
nom = "*"
etherparse = "0.8.0"
failure = "*"
failure_derive = "*"
structopt = "*"
lazy_static = "*"
sql_lexer = "*"
